<resources>
    <string name="app_name">EasyHealthcare</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="til_patient_name">Your First Name</string>
    <string name="til_patient_last_name">Last Name</string>
    <string name="til_age">Age</string>
    <string name="til_city">City</string>
    <string name="til_phone">Phone Number</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="til_email">Email Id</string>
    <string name="til_password">Password</string>
    <string name="til_confirm_password">Confirm Password</string>
    <string name="til_address">Address</string>
    <string name="til_degree">Degree</string>
    <string name="til_treatments">Treatment Provided</string>
    <string name="til_clinic">Clinic/Hospital Name</string>
    <string name="til_clinic_address">Clinic/Hospital Address</string>
</resources>